--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/icons">
         <file>ICON_eraser.png</file>
         <file>ICON_paintbucker.png</file>
+        <file>ICON_colorpallate.png</file>
+        <file>ICON_selector.png</file>
     </qresource>
 </RCC>
