--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -35,7 +35,7 @@
      <x>0</x>
      <y>0</y>
      <width>805</width>
-     <height>26</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
@@ -78,6 +78,10 @@
   <action name="actionSelectTool">
    <property name="checkable">
     <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/icons/ICON_selector.png</normaloff>:/icons/ICON_selector.png</iconset>
    </property>
    <property name="text">
     <string>SelectTool</string>
@@ -134,6 +138,10 @@
    </property>
   </action>
   <action name="actionColorPicker">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/icons/ICON_collorpallete.png</normaloff>:/icons/ICON_collorpallete.png</iconset>
+   </property>
    <property name="text">
     <string>ColorPicker</string>
    </property>
