--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>805</width>
+    <width>895</width>
     <height>600</height>
    </rect>
   </property>
@@ -19,9 +19,12 @@
      <rect>
       <x>120</x>
       <y>20</y>
-      <width>421</width>
-      <height>331</height>
+      <width>441</width>
+      <height>351</height>
      </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
     </property>
     <property name="text">
      <string/>
@@ -34,8 +37,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>805</width>
-     <height>24</height>
+     <width>895</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
