--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="previewDisplay">
+   <widget class="QLabel" name="PreviewLabel">
     <property name="geometry">
      <rect>
       <x>610</x>
