--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -77,6 +77,9 @@
       <height>24</height>
      </rect>
     </property>
+    <property name="minimum">
+     <number>40</number>
+    </property>
     <property name="maximum">
      <number>100</number>
     </property>
@@ -84,7 +87,7 @@
      <number>10</number>
     </property>
     <property name="value">
-     <number>20</number>
+     <number>40</number>
     </property>
     <property name="orientation">
      <enum>Qt::Orientation::Horizontal</enum>
@@ -101,7 +104,7 @@
      <x>0</x>
      <y>0</y>
      <width>895</width>
-     <height>24</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
