--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -52,8 +52,11 @@
       <height>25</height>
      </rect>
     </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
     <property name="maximum">
-     <number>30</number>
+     <number>60</number>
     </property>
     <property name="pageStep">
      <number>10</number>
@@ -96,6 +99,19 @@
      <enum>QSlider::TickPosition::TicksBelow</enum>
     </property>
    </widget>
+   <widget class="QPushButton" name="previewButton">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>270</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>start</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menuBar">
@@ -104,7 +120,7 @@
      <x>0</x>
      <y>0</y>
      <width>895</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="fileMenu">
