--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -115,11 +115,24 @@
    <widget class="QTabWidget" name="frameTabBar">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>360</y>
+      <x>640</x>
+      <y>450</y>
       <width>135</width>
       <height>80</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="trueSizeLabel">
+    <property name="geometry">
+     <rect>
+      <x>647</x>
+      <y>320</y>
+      <width>101</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
